@@ -1,2 +1,3 @@
 - Added the gform_order_summary filter enabling the GP eCommerce Fields Add-On to modify the location of discount and tax fields in the order summary table.
+- Fixed status page step column from display expires date/time when step also has schedule queued
 - Fixed an issue where the file upload field appears to lose its value following progress save on the user input step.
